--- a/css/main.css
+++ b/css/main.css
@@ -50,8 +50,9 @@
   input {
     display: table-cell;
     font-family: monospace;
+    font-size: 16px;
     margin-bottom: 10px;
-    color: blue;
+    color: rgb(54, 54, 166);
   }
   label {
     padding-right: 10px;
