--- a/css/main.css
+++ b/css/main.css
@@ -40,10 +40,10 @@
     padding: 0 3px;
   }
 
-  form.form-example {
+  form.form {
     display: table;
   }
-  div.form-example {
+  div.form {
     display: table-row;
   }
   label,
