--- a/css/main.css
+++ b/css/main.css
@@ -1,44 +1,66 @@
 /* Place CSS styles here */
-/* media query for phones */
+/* Style the navigation menu */
+.navigation {
+  overflow: hidden;
+  background-color:black
+  position: relative;
+}
+
+/* Hide the links inside the navigation menu (except for logo/home) */
+.navigation #myLinks {
+  display: none;
+}
+
+/* Style navigation menu links */
+.navigation a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+/* Style the hamburger menu */
+.navigation a.icon {
+  background: rgb(4, 68, 43);
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+/* Add a grey background color on mouse-over */
+.navigation a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Style the active link (or home/logo) */
+.active {
+  background-color: #039964;
+  color: white;
+}
+
+
 @media (max-width: 480px) {
-    body {
-      background-color: teal;
-    }
+  body {
+    background-color: teal;
   }
-  
-  /* media query for tablet */
-  @media (min-width: 481px) and (max-width: 767px) {
-    body {
-      background-color: teal;
-    }
+}
+
+/* media query for tablet */
+@media (min-width: 481px) and (max-width: 767px) {
+  body {
+    background-color: teal;
   }
-  
-  /* media query for desktop */
-  @media (min-width: 768px) {
-    body {
-      background-color: teal;
-    }
+}
+
+/* media query for desktop */
+@media (min-width: 768px) {
+  body {
+    background-color: teal;
   }
-  nav {
-    background-color: rgb(144, 156, 237);
-  }
-  
-  .one ol {
-    list-style-type: none;
-    padding-left: 0;
-  }
-  
-  .one {
-    display: inline-block;
-  }
-  
-  .one a::after {
-    display: inline-block;
-    color: #000;
-    font-size: 80%;
-    font-weight: bold;
-    padding: 0 3px;
-  }
+}
 
   form.form {
     display: table;
