--- a/css/main.css
+++ b/css/main.css
@@ -61,33 +61,6 @@
     background-color: teal;
   }
 }
-
-  form.form {
-    display: table;
-  }
-  div.form {
-    display: table-row;
-  }
-  label,
-  input {
-    display: table-cell;
-    font-family: monospace;
-    font-size: 16px;
-    margin-bottom: 10px;
-    color: rgb(54, 54, 166);
-  }
-  label {
-    padding-right: 10px;
-  }
-   .page-section {
-    display: flex;
-    justify-content: center;
-   }
-   label {
-    display: block;
-    font-family: monospace;
-  }
-  input,
-  label {
-    margin: 0.4rem 0;
-  }
+body, html {
+  height: 100%;
+}
